# Cpp-Lessons-Exercises

Lesson13/: CMakeLists.txt
Lesson13/docs/: Doxyfile.in
Lesson13/docs/source/: index.rst
Lesson13/homework1/: main.cxx  quijote.txt  word_frequencies.txt  word_frequencies_quijote.txt  zipf.h
Lesson13/test/: zipftest.cpp
Lesson14/docs/: CMakeLists.txt
Lesson14/docs/source/: conf.py  index.rst
Lesson14/homework1/: CMakeLists.txt  file.txt  main.cxx  word_frequencies.txt  word_frequencies_quijote.txt  zipf.h
Lesson14/test/: CMakeLists.txt  zipftest.cpp
